--- a/appendix_b.Rmd
+++ b/appendix_b.Rmd
@@ -139,13 +139,25 @@ library(knitr)
 library(kableExtra)
 library(readxl)
 library(rmarkdown)
+library(stringr)
+
 theSheet_Names <- list.files(path = "HTML/Performance/GEN2/HTML", pattern = NULL, all.files = FALSE,
            full.names = FALSE, recursive = FALSE,
            ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
-theSheet <- paste("<",'a href="HTML/Performance/GEN2/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">", sep = "")
-#theSheet <- append(theSheets,'Validation 2013 2016',0)
 
-kbl(theSheet, caption = "Model results for Generation 2 nWV nSDG", align = "l",escape = F,col.names = 'Generation 2 2017 2022', ) %>%
+theSheet_Names2 <- list.files(path = "HTML/Performance/TRAN/HTML", pattern = NULL, all.files = FALSE,
+           full.names = FALSE, recursive = FALSE,
+           ignore.case = FALSE, include.dirs = FALSE, no.. = FALSE)
+
+theSheet <- paste(
+  "<",'a href="HTML/Performance/GEN2/HTML/',theSheet_Names,'"',">",theSheet_Names,"<",'/a',">",",",
+  "<",'a href="HTML/Performance/TRAN/HTML/',theSheet_Names2,'"',">",theSheet_Names2,"<",'/a',">",
+  sep = "")
+
+theSheet <- str_split_fixed(theSheet, ',', 2)
+
+
+kbl(theSheet, caption = "Model results for Generation 2 nWV nSDG", align = "l",escape = F,col.names = c("Generation 2 2017 2022","Generation 2 2017 2022 (Transect)"), ) %>%
 row_spec(0, background = "#14759e", bold = TRUE, color = "white") %>%
   kable_styling(full_width = T,font_size = 10) %>%
     scroll_box(fixed_thead = FALSE)
