Add panelset dependencies

--- a/index.Rmd
+++ b/index.Rmd
@@ -20,6 +20,11 @@ knitr::knit_hooks$set(class = function(before, options, envir) {
 })
 ```
 
+```{r panel-setup, include = FALSE}
+xaringanExtra::use_panelset()
+xaringanExtra::style_panelset(font_family = "inherit")
+```
+
 
 # Welcome {-}
 
