--- a/index.Rmd
+++ b/index.Rmd
@@ -21,6 +21,7 @@ knitr::knit_hooks$set(class = function(before, options, envir) {
 ```
 
 ```{r panel-setup, include = FALSE}
+library(downlit)
 xaringanExtra::use_panelset()
 xaringanExtra::style_panelset(font_family = "inherit")
 ```
