--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "MR Hipsey, P Huang, S Zhai, B Busch, D Paraska, C Sims"
 date: "`r format(Sys.time(), ' %d-%B-%Y')`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography:  ["references/references.bib"]
+bibliography:  ["references/Habitat.bib"]
 biblio-style: apalike
 link-citations: yes
 description: "The Coorong Dynamics Model (CDM)"
